--- a/AdvancedSoftwareEngineering/2-Application_Code/2-Application_Code.csproj
+++ b/AdvancedSoftwareEngineering/2-Application_Code/2-Application_Code.csproj
@@ -6,4 +6,9 @@
     <RootNamespace>_2_Application_Code</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\0-Abstraction_Code\0-Abstraction_Code.csproj" />
+    <ProjectReference Include="..\1-Domain_Code\1-Domain_Code.csproj" />
+  </ItemGroup>
+
 </Project>
