--- a/AdvancedSoftwareEngineering/3-Adapters/3-Adapters.csproj
+++ b/AdvancedSoftwareEngineering/3-Adapters/3-Adapters.csproj
@@ -6,4 +6,10 @@
     <RootNamespace>_3_Adapters</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\0-Abstraction_Code\0-Abstraction_Code.csproj" />
+    <ProjectReference Include="..\1-Domain_Code\1-Domain_Code.csproj" />
+    <ProjectReference Include="..\2-Application_Code\2-Application_Code.csproj" />
+  </ItemGroup>
+
 </Project>
