Add classes on domain level

--- a/AdvancedSoftwareEngineering/1-Domain_Code/1-Domain_Code.csproj
+++ b/AdvancedSoftwareEngineering/1-Domain_Code/1-Domain_Code.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\0-Abstraction_Code\0-Abstraction_Code.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DomainServices\" />
+  </ItemGroup>
+
 </Project>
