Start building UI
First steps of Categoryeditor UI

--- a/AdvancedSoftwareEngineering/1-DomainCode/1-DomainCode.csproj
+++ b/AdvancedSoftwareEngineering/1-DomainCode/1-DomainCode.csproj
@@ -9,4 +9,8 @@
     <Folder Include="DomainServices\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\0-AbstractionCode\0-AbstractionCode.csproj" />
+  </ItemGroup>
+
 </Project>
