--- a/AdvancedSoftwareEngineering/2-ApplicationCode/2-ApplicationCode.csproj
+++ b/AdvancedSoftwareEngineering/2-ApplicationCode/2-ApplicationCode.csproj
@@ -5,4 +5,9 @@
     <RootNamespace>_2_ApplicationCode</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\0-AbstractionCode\0-AbstractionCode.csproj" />
+    <ProjectReference Include="..\1-DomainCode\1-DomainCode.csproj" />
+  </ItemGroup>
+
 </Project>
