--- a/AdvancedSoftwareEngineering/4-UI/4-Plugin.csproj
+++ b/AdvancedSoftwareEngineering/4-UI/4-Plugin.csproj
@@ -55,6 +55,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="UI\SpendingEditor.xaml.cs">
+      <DependentUpon>SpendingEditor.xaml</DependentUpon>
+    </Compile>
     <Page Include="UI\CategoryEditor.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -81,6 +84,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="UI\SpendingEditor.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
