--- a/AdvancedSoftwareEngineering/UnitTests/UnitTests.csproj
+++ b/AdvancedSoftwareEngineering/UnitTests/UnitTests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -11,6 +11,14 @@
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\0-AbstractionCode\0-AbstractionCode.csproj" />
+    <ProjectReference Include="..\1-DomainCode\1-DomainCode.csproj" />
+    <ProjectReference Include="..\2-ApplicationCode\2-ApplicationCode.csproj" />
+    <ProjectReference Include="..\3-Adapters\3-Adapters.csproj" />
+    <ProjectReference Include="..\4-UI\4-Plugin.csproj" />
   </ItemGroup>
 
 </Project>
