--- a/AdvancedSoftwareEngineering/UnitTests/UnitTests.csproj
+++ b/AdvancedSoftwareEngineering/UnitTests/UnitTests.csproj
@@ -21,4 +21,9 @@
     <ProjectReference Include="..\4-UI\4-Plugin.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="2_ApplicationCode\" />
+    <Folder Include="3_Adapters\" />
+  </ItemGroup>
+
 </Project>
