Add Spending Overview
Add page for spending overview with ability to show spendings of a selected category in a selected timeframe.

--- a/AdvancedSoftwareEngineering/4-UI/4-Plugin.csproj
+++ b/AdvancedSoftwareEngineering/4-UI/4-Plugin.csproj
@@ -71,6 +71,9 @@
     <Compile Include="UI\SpendingEditor.xaml.cs">
       <DependentUpon>SpendingEditor.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UI\SpendingOverview.xaml.cs">
+      <DependentUpon>SpendingOverview.xaml</DependentUpon>
+    </Compile>
     <Page Include="UI\CategoryEditor.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -98,6 +101,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="UI\SpendingEditor.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UI\SpendingOverview.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
